fixed some spacing and firefox support

--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -132,6 +132,7 @@ body {
         font-size: 21px;
         font-weight: 700;
         line-height: 30px;
+        margin: 10px;
     }
 
     p {
@@ -139,7 +140,8 @@ body {
         font-weight: 300;
         line-height: 30px;
         max-width: 315px;
-        justify-self: center;
+        display: inline-block;
+        margin: 0;
 
         @media (max-width: @breakpoint-l) {
             max-width: 100%;
